# streamlumo-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  run-engine.sh  test_cef.py
Helpers/streamlumo-browser-helper.app/Contents/: Info.plist
Helpers/streamlumo-browser-helper.app/Contents/MacOS/: streamlumo-browser-helper
browser-helper/: AppDelegate.h  AppDelegate.mm  BrowserClient.h  BrowserClient.mm  BrowserManager.h  BrowserManager.mm  BrowserShmWriter.h  BrowserShmWriter.mm  CMakeLists.txt  HelperApp.h  HelperApp.mm  Info.plist.in  README.md  WebSocketStub.h  WebSocketStub.mm  main.m
docs/: BUILDING.md  browser-helper.md
entitlements/: streamlumo-engine-helper.entitlements  streamlumo-engine.entitlements
patches/: obs-browser-headless.patch  obs-websocket-headless.patch
plugins/obs-browser-bridge/: CMakeLists.txt  README.md
plugins/obs-browser-bridge/include/: BrowserShmReader.h
plugins/obs-browser-bridge/src/: BrowserShmReader.cpp  browser-bridge-manager.cpp  browser-bridge-manager.hpp  browser-bridge-source.cpp  browser-bridge-source.hpp  frame-decoder.cpp  frame-decoder.hpp  ipc-client.cpp  ipc-client.hpp  plugin-main.cpp
scripts/: build-obs-browser-headless.sh  build-obs.sh  build.sh  download-deps.sh  setup-dev-env.sh  sign.sh
src/: browser_helper_client.cpp  browser_helper_client.h  browser_helper_launcher.cpp  browser_helper_launcher.h  config.cpp  config.h  engine.cpp  engine.h  frontend-stubs.cpp  frontend-stubs.h  logging.cpp  logging.h  main.cpp
src/platform/: platform.h  platform_common.cpp  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
